--- a/portafolio/src/components/MiPersona.css
+++ b/portafolio/src/components/MiPersona.css
@@ -1,20 +1,22 @@
 .logo_nobg{
     z-index: 3;
-    height: 7rem;
+    height: 7vw;
+    min-height: 100px;
     border-radius: 100%;
     background: rgba(91, 8, 102, 0.281);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     box-shadow: 0 4px 20px rgba(255, 255, 255, 0.2);
     padding: 0.5rem;
-    margin-left: 5px;
+    margin-left: 1vw;
     
   }
 .burbuja{
-
-  margin-left: 30px;
+  font-size: 1.5vw;
+  margin-left: 3vw;
+  margin-right: 3vw;
 }
 
 .persona{
-  margin-top: 20px;
+  margin-top: 2vw;
 }
