--- a/portafolio/src/components/Navbar.css
+++ b/portafolio/src/components/Navbar.css
@@ -1,7 +1,7 @@
 /*MENU*/
 .nav {
-  padding: 10px;
-    height: 5.0vw;
+    padding: 10px;
+    height: 4.2vw;
     z-index: 999;
     position: fixed;
     width: 100%;
@@ -11,7 +11,6 @@
   }
   
   .menu {
-    display: flex;
     justify-content: space-between;
   }
   .menu, ol, ul {
@@ -19,23 +18,13 @@
     align-items: center;
 
 }
-  .menu a {
-    clear: right;
-    text-decoration: none;
-    color: #000000;
-    margin: 0 10px;
-    line-height: 70px;
-    letter-spacing: .9px;
-    text-transform: uppercase;
-    transition: all 250ms ease;
-  }
-  
+
   .menu h5 {
     margin: 0 30px;
     text-transform: uppercase;
     float: left;
     font-weight: 300;
-    font-size: 2.5vw;
+    font-size: 2.2vw;
     letter-spacing: 2px;
     position: relative;
     z-index: 999;
@@ -47,10 +36,10 @@
 }
 
 
-  .photo {
-    
+  .photo { 
     width: 100%;
-    height: 43rem;
+    height: 40vw;
+    min-height: 450px;
     position: relative;
     background: url('https://images8.alphacoders.com/841/841718.jpg') center;
     background-size: cover;
@@ -106,7 +95,7 @@
   }
 
   .icons__icons{
-    font-size: 2.5vw;
+    font-size: 3vw;
     margin: 0.8rem;
     color: #ffffff;
     text-shadow: 2px 2px 5px rgb(0, 0, 0);
@@ -124,6 +113,7 @@
   -webkit-backdrop-filter: blur(10px);
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
   padding: 0.8rem;
+  margin-top: 2vw;
   
 }
   /* Resto de tu CSS se mantiene igual */
