--- a/portafolio/src/components/Portafolio.css
+++ b/portafolio/src/components/Portafolio.css
@@ -1,14 +1,21 @@
 .card_beacon{  
     display: flex;
-    height: 350px;
+    height: auto;
+    justify-content: space-around;
 }
 .logo_beacon{
     height: 12vw;
     margin: auto;
+    min-height: 70px;
+}
+.logo_dimen{
+    height: 14vw;
+    min-height: 100px;
+    margin: auto;
 }
 p{
-    max-width: 60%;
-    font-size: 1.5vw;
+    max-width: 70%;
+    font-size: clamp(12px, 2.5vw, 30px);
 }
 
 .cards{
@@ -18,4 +25,8 @@ p{
 .carta{
     margin-top: 4vw;
     width: 100%;
+}
+
+video{
+    max-width: 40% !important;
 }
